--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "uingame-auth",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "engines": {
-    "node": "9.11.1"
+    "node": "20.x"
   },
   "description": "Authenication Server for UINGame",
   "main": "src/index.js",
@@ -14,16 +14,16 @@
   "license": "UNLICENCED",
   "private": true,
   "dependencies": {
+    "@node-saml/passport-saml": "^5.0.0",
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "idp-metadata-parser": "^0.1.0",
-    "passport": "^0.4.0",
-    "passport-saml": "^0.33.0",
+    "passport": "^0.7.0",
     "query-string": "^6.0.0",
     "rand-token": "^0.4.0",
-    "redis": "^2.8.0",
-    "request": "^2.87.0",
-    "request-promise": "^4.2.2"
+    "redis": "^4.6.13",
+    "uuid": "^8.3.2",
+    "dotenv": "^16.4.5"
   }
 }
