--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.4",
+    "dotenv": "^16.4.5",
     "express": "^4.16.3",
     "passport": "^0.7.0",
     "query-string": "^6.0.0",
     "rand-token": "^0.4.0",
     "redis": "^4.6.13",
-    "uuid": "^8.3.2",
-    "dotenv": "^16.4.5"
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
