Fix: Restore Node 9.11.1 (original working version)

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "uingame-auth",
   "version": "1.1.0",
   "engines": {
-    "node": "18.x"
+    "node": "9.11.1"
   },
   "description": "Authenication Server for UINGame",
   "main": "src/index.js",
