--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "uingame-auth",
   "version": "1.1.0",
   "engines": {
-    "node": "20.x"
+    "node": "16.x"
   },
   "description": "Authenication Server for UINGame",
   "main": "src/index.js",
@@ -20,6 +20,7 @@
     "cors": "^2.8.4",
     "dotenv": "^16.4.5",
     "express": "^4.16.3",
+    "node-fetch": "^2.7.0",
     "passport": "^0.7.0",
     "query-string": "^6.0.0",
     "rand-token": "^0.4.0",
