--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.4",
     "dotenv": "^16.4.5",
     "express": "^4.16.3",
+    "https-proxy-agent": "^5.0.1",
     "node-fetch": "^2.7.0",
     "passport": "^0.7.0",
     "query-string": "^6.0.0",
